--- a/JavaScriptDom&UI/7.DOM-Operations/1.RandomDivs.html
+++ b/JavaScriptDom&UI/7.DOM-Operations/1.RandomDivs.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -6,7 +6,7 @@
 </head>
 <body>
 		<input type="text" id="divsCounter"/>
-		<a href="#" onclick="drawingDivs()" />Generate </a>
+		<a href="#" onclick="drawingDivs()" >Generate </a>
 
 
 	<script type="text/javascript">
